deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: m-platform-test
  labels:
    app: app
spec:
  serviceAccountName: my-service-account
  ports:
    - port: 3930
      protocol: TCP
      targetPort: 4545
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: m-platform-test
  labels:
    app: app
spec:
  serviceAccountName: my-service-account
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: IMAGE
        ports:
        - containerPort: 3301
